repository-team-blue/home-guard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-guard
  labels:
    team: team-blue
    app: home-guard
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    team: team-blue
    app: home-guard
