repository-team-blue/home-guard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-guard
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /home-guard
        pathType: Prefix
        backend:
          service:
            name: home-guard
            port:
              name: web
